--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -167,6 +167,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\deliqus - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\deliqus - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\deliqus2 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\deliqus2 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -192,6 +196,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Products.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
